--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -23,17 +23,27 @@ ul{
 //header
 header{
   display: flex;
+  justify-content: space-between;
   
+  .left-box{
+    width: 33%;
+    display: block;
+    content: "";
+    clear: both;
+  }
   
   .title-box{
     width: 33%;
-    margin: auto;
     text-align: center;
   }
   
-  img{
-    width: 48px;
-    height: auto;
+  .right-box{
+    width: 33%;
+    text-align: right;
+  }
+  
+  .header-image{
+    width: 32px;
   }
   
 }
