--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -7,7 +7,8 @@ font-size: ($size / 16) * 1rem;
 
 }
 
-menu{
+menu, p{
+  margin: 0;
   padding: 0;
 }
 
@@ -66,11 +67,11 @@ menu{
 
 
 .wrapper{
-  @media (max-width: 560px){
+  @media (max-width: 559px){
       margin: 0 16px;
   }
   
-  @media (min-width: 561px) and (max-width: 920px){
+  @media (min-width: 560px) and (max-width: 920px){
       margin: 0 56px;
   }
 }
@@ -125,19 +126,30 @@ menu{
 
 //user.html
 .user-box{
-
-  &__image{
-    width: 288px;
-    height: 288px;
-    margin: auto;
+  margin-top: 48px;
+  
+  .user-box__first-row{
+    margin-bottom: 24px;
     
-    img{
-      height: 100%;
+    
+    &__username{
+      display: inline-block;
+      vertical-align: middle;
+      @include fontsize(24);
+    }
+    
+    &__cog{
+      float: right;
+      display: inline-block;
+      vertical-align: middle;
+      height: 24px;
     }
   }
   
-  &__username{
-    @include fontsize(24);
+  .clearfix::after{
+    content: "";
+    display: block;
+    clear: both;
   }
   
   .follow-box{
@@ -149,4 +161,38 @@ menu{
   .description{
     margin: 32px 0 56px;
   }
+  
+  @media(min-width: 560px){
+    display: flex;
+    
+    &__image{
+      width: 40%;
+      
+      img{
+        width: 100%;
+      }
+    }
+    
+    &__lower{
+      padding-left: 24px;
+      width: 60%;
+    }
+  }
+  
+  @media(max-width: 559px){
+    &__image{
+      width: 288px;
+      height: 288px;
+      margin: auto;
+      
+      img{
+        height: 100%;
+      }
+    }
+    
+    &__lower{
+      margin-top: 24px;
+    }
+  }
+
 }
